--- a/trunk/demo/fcldb/demorest.html
+++ b/trunk/demo/fcldb/demorest.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script type="application/javascript">
-     rtl.showUncaughtExceptions=true;
+     //rtl.showUncaughtExceptions=true;
      rtl.run();
     </script>
   </body>
