--- a/trunk/demo/tetris/tetris.html
+++ b/trunk/demo/tetris/tetris.html
@@ -35,7 +35,7 @@
           <p><span id="control-right">Arrow-Right:</span> Move right</p>
           <p><span id="control-down">Arrow-Down:</span> Move down</p>
           <p><span id="control-rotate">Arrow-up:</span> Rotate block</p>
-          <p><span id="control-drop">Arrow-up:</span> Drop block</p>
+          <p><span id="control-drop">Space bar:</span> Drop block</p>
         </div>
       </div>
       <button id="btn-reset" class="btn-primary">Restart</button>
