* Make it look better in Chrome

--- a/trunk/demo/tetris/tetris.html
+++ b/trunk/demo/tetris/tetris.html
@@ -16,22 +16,21 @@
         </div>
         <div id="info">
           <div id="logo">
-            <!-- <img id="logo-img" src="tetrislogo.png" width="161" height="54"/> -->
             <img id="logo-img" src="tetrislogo.png" height="54"/>
           </div>
-          <div id="score-envelope">
+          <div id="score-envelope" class="envelope">
             <div id="score-label" class="label">Score:</div>
             <div id="score">0</div>
           </div>
-          <div id="level-envelope">
+          <div id="level-envelope" class="envelope">
             <div id="level-label" class="label">Level:</div>
             <div id="level">1</div>
           </div>
-          <div id="status-envelope">
+          <div id="status-envelope" class="envelope">
             <div id="status-label" class="label">Game status:</div>
             <div id="status">Playing</div>
           </div>
-          <div id="controls-envelope">
+          <div id="controls-envelope" class="envelope">
             <div id="controls-label" class="label">Controls:</div>
             <div id="controls">
               <div class="one-btn">
@@ -45,11 +44,11 @@
                 <button class="button" id="control-down"><i class="fas fa-arrow-down"></i>&nbsp; &nbsp;Move Down</button>
               </div>
               <div class="one-btn">
-                <button class="button" id="control-drop">Space bar: Drop block</button>
+                <button class="button" id="control-drop"><i class="fas fa-level-down-alt"></i>&nbsp; &nbsp;Space bar: Drop block</button>
               </div>
             </div>
           </div>
-          <button id="btn-reset" class="btn-primary">Restart</button>
+          <button id="btn-reset">Restart</button>
         </div>
     </div>
     <div class="source">
