Draw board while no sound loaded, fix arrow buttons

--- a/trunk/demo/pacman/pacman.html
+++ b/trunk/demo/pacman/pacman.html
@@ -56,7 +56,7 @@
             <div id="controls-label" class="label">Controls:</div>
             <div id="controls">
               <div class="one-btn">
-                <button class="button" id="control-rotate"><i class="fas fa-sync"></i>&nbsp; &nbsp; Move up</button>
+                <button class="button" id="control-up"><i class="fas fa-arrow-up"></i>&nbsp; &nbsp; Move up</button>
               </div>
               <div class="two-btn">
                 <button class="button" id="control-left"><i class="fas fa-arrow-left"></i>&nbsp;&nbsp;Move Left</button>
