--- a/trunk/demo/pacman/pacman.html
+++ b/trunk/demo/pacman/pacman.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,70 +16,84 @@
     <audio id="audio-eatghost" src="audio/eatghost.mp3" type="audio/mp3" preload="true" autobuffer="true"></audio>
     <audio id="audio-eatpill" src="audio/eating.mp3" type="audio/mp3" preload="true" autobuffer="true"></audio>
     <div id="pacman">
-        <div id="gameboard">
-          <canvas id="my-canvas"></canvas>
+      <div id="gameboard">
+        <canvas id="my-canvas"></canvas>
+      </div>
+      <div id="info">
+        <div id="logo">
+          <img id="logo-img" src="pacmanlogo.jpeg" width="80%"/>
         </div>
-        <div id="info">
-          <div id="logo">
-            <!-- <img id="logo-img" src="tetrislogo.png" height="54"/> -->
+        <div id="scare-envelope">
+          <div id="scare-outer" class="progress">
+            <div id="scare-inner" class="progress-inner"></div>
           </div>
-          <div id="scare-envelope" class="envelope">
-            <div id="scare-outer" class="progress"><div id="scare-inner" class="progress-inner"></div></div>
+        </div>
+        <div id="bonus-envelope">
+          <div id="bonus-outer" class="progress">
+            <div id="bonus-inner" class="progress-inner"></div>
           </div>
-          <div id="bonus-envelope" class="envelope">
-            <div id="bonus-outer" class="progress"><div id="bonus-inner" class="progress-inner"></div></div>
+        </div>
+        <div id="highscore-envelope">
+          <div id="highscore-label" class="label">High Score:</div>
+          <div id="highscore">0</div>
+        </div>
+        <div id="score-envelope">
+          <div id="score-label" class="label">Score:</div>
+          <div id="score">0</div>
+        </div>
+        <div id="lives-envelope">
+          <div id="lives-label" class="label">Lives:</div>
+          <div id="lives">3</div>
+        </div>
+        <div id="status-envelope">
+          <div id="status-label" class="label">Game status:</div>
+          <div id="status">Playing</div>
+        </div>
+        <div id="ghosts-envelope">
+          <div id="ghosts-label" class="label">
+            <img id="ghost-scared" src="ghost-scared.png" class="img"/>
           </div>
-          <div id="highscore-envelope" class="envelope">
-            <div id="highscore-label" class="label">High Score:</div>
-            <div id="highscore">0</div>
+          <div id="ghosts">0</div>
+        </div>
+        <div id="bonus-envelope">
+          <div id="bonus-label" class="label">
+            <img id="cherry" src="cherry.png" class="img"/>
           </div>
-          <div id="score-envelope" class="envelope">
-            <div id="score-label" class="label">Score:</div>
-            <div id="score">0</div>
-          </div>
-          <div id="lives-envelope" class="envelope">
-            <div id="lives-label" class="label">Lives:</div>
-            <div id="lives">3</div>
-          </div>
-          <div id="status-envelope" class="envelope">
-            <div id="status-label" class="label">Game status:</div>
-            <div id="status">Playing</div>
-          </div>
-          <div id="ghosts-envelope" class="envelope">
-            <div id="ghosts-label" class="label"><img id="ghost-scared" src="ghost-scared.png"/></div>
-            <div id="ghosts">0</div>
-          </div>
-          <div id="bonus-envelope" class="envelope">
-            <div id="bonus-label" class="label"><img id="cherry" src="cherry.png"/></div>
-            <div id="bonus">0</div>
-          </div>
-          <div id="controls-envelope" class="envelope">
-            <div id="controls-label" class="label">Controls:</div>
-            <div id="controls">
-              <div class="one-btn">
-                <button class="button" id="control-up"><i class="fas fa-arrow-up"></i>&nbsp; &nbsp; Move up</button>
-              </div>
-              <div class="two-btn">
-                <button class="button" id="control-left"><i class="fas fa-arrow-left"></i>&nbsp;&nbsp;Move Left</button>
-                <button class="button" id="control-right">Move Right&nbsp; &nbsp;<i class="fas fa-arrow-right"></i></button>
-              </div>
-              <div class="one-btn">
-                <button class="button" id="control-down"><i class="fas fa-arrow-down"></i>&nbsp; &nbsp;Move Down</button>
-              </div>
-              <div class="one-btn">
-                <button class="button" id="control-pause"><i>P</i>&nbsp; &nbsp;Pause/Resume</button>
-              </div>
+          <div id="bonus">0</div>
+        </div>
+        <div id="controls-envelope">
+          <div id="controls-label" class="label">Controls:</div>
+          <div id="controls">
+            <div class="one-btn">
+              <button class="button" id="control-rotate"><i class="fas fa-arrow-up"></i>&nbsp; &nbsp; Move Up</button>
+            </div>
+            <div class="two-btn">
+              <button class="button" id="control-left"><i class="fas fa-arrow-left"></i>&nbsp;&nbsp;Move Left</button>
+              <button class="button" id="control-right">Move Right&nbsp; &nbsp;<i class="fas fa-arrow-right"></i></button>
+            </div>
+            <div class="one-btn">
+              <button class="button" id="control-down"><i class="fas fa-arrow-down"></i>&nbsp; &nbsp;Move Down</button>
+            </div>
+            <div class="one-btn">
+              <button class="button" id="control-pause"><i class="fas fa-pause"></i>&nbsp; &nbsp;Pause / Resume</button>
             </div>
           </div>
-          <button id="btn-reset">Restart</button>
-          <div id=sound-envelope" class="envelope">
-            <div id="sound-label" class="label">Sound:</div>
-            <div id="sound"><input id="cbx-sound" type=checkbox value="0" /></div>
-           </div>
         </div>
+        <div id=sound-envelope >
+          <label id="sound-label" class="label" for="cbx-sound">Sound:</label>
+          <div id="sound">
+            <input id="cbx-sound" type="checkbox" value="0" />
+          </div>
+        </div>
+      </div>
     </div>
     <div class="source">
-        Created using &nbsp; <a target="_blank" href="https://wiki.freepascal.org/pas2js">pas2js.</a> &nbsp;&nbsp;Sources: &nbsp; <a target="new" href="pacman.lpr">Program</a> &nbsp; <a target="new" href="upacman.pp">unit</a>.
+      <div class="source-inner">
+        <div>
+          Created using &nbsp; <a target="_blank" href="https://wiki.freepascal.org/pas2js">pas2js.</a> &nbsp;&nbsp;Sources: &nbsp; <a target="new" href="pacman.lpr">Program</a> &nbsp; <a target="new" href="upacman.pp">unit</a>.
+        </div>
+        <button id="btn-reset">Restart</button>
+      </div>
     </div>
     <div style="display: none;">
       <img id="ghost1" src="ghost1.png"/>
