--- a/trunk/demo/pacman/pacman.html
+++ b/trunk/demo/pacman/pacman.html
@@ -65,7 +65,7 @@
           <div id="controls-label" class="label">Controls:</div>
           <div id="controls">
             <div class="one-btn">
-              <button class="button" id="control-rotate"><i class="fas fa-arrow-up"></i>&nbsp; &nbsp; Move Up</button>
+              <button class="button" id="control-up"><i class="fas fa-arrow-up"></i>&nbsp; &nbsp; Move Up</button>
             </div>
             <div class="two-btn">
               <button class="button" id="control-left"><i class="fas fa-arrow-left"></i>&nbsp;&nbsp;Move Left</button>
