* Add some styling

--- a/trunk/demo/resources/htmldemo.html
+++ b/trunk/demo/resources/htmldemo.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Javascript resource demo</title>
     <script type="application/javascript" src="htmldemo.js"></script>
+    <link rel="stylesheet" href="css/stylejs.css"/>
   </head>
   <body>
     <h1>Javascript resource demo</h1>
@@ -14,7 +15,7 @@
   <button type="button" id="doinsert">Insert HTML from resource</button> 
   <h1 id="headertext">Press button to insert HTML below from resource data</h1>
   <div id="playarea">
-  </div>
+  </div><br>
   <p>
   <div>
     Created using &nbsp; <a target="_blank" href="https://wiki.freepascal.org/pas2js">pas2js.</a> &nbsp;&nbsp;Sources: &nbsp; 
