--- a/trunk/demo/resources/htmlloadlinkdemo.html
+++ b/trunk/demo/resources/htmlloadlinkdemo.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Project1</title>
+  <link rel="stylesheet" href="css/stylelink.css">
   <script src="htmlloadlinkdemo.js"></script>
 </head>
 <body>
