* Add link to program sources

--- a/trunk/demo/fullcalendar/demofullcalendar.html
+++ b/trunk/demo/fullcalendar/demofullcalendar.html
@@ -53,6 +53,12 @@
     </div>
     <div id="thecalendar">
     </div>
+   <div class="source row">
+     <div>
+       Created using &nbsp; <a target="_blank" href="https://wiki.freepascal.org/pas2js">pas2js.</a> &nbsp;&nbsp;Sources: &nbsp; 
+       <a target="new" href="demofullcalendar.lpr">Program</a>.
+     </div>
+    </div>
   </div>
   <script>
   window.addEventListener("load", rtl.run);
