* Node command-line demos

--- a/trunk/demo/jspdf/basic.html
+++ b/trunk/demo/jspdf/basic.html
@@ -40,6 +40,16 @@
           </div>
         </div>
       </div>
+      <div class="row">
+    <div class="source">
+      <div class="source-inner">
+        <div>
+          Created using &nbsp; <a target="_blank" href="https://wiki.freepascal.org/pas2js">pas2js.</a> &nbsp;&nbsp;Sources: &nbsp; <a target="new" href="basic.lpr">Program
+          sources</a>.
+        </div>
+      </div>
+    </div>
+      </div>
     </div>
     <script>
       rtl.run();
