--- a/trunk/test/testrtl.html
+++ b/trunk/test/testrtl.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TStream test</title>
+  <title>RTL testsuite</title>
   <script SRC="testrtl.js" type="application/javascript"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"   crossorigin="anonymous">
  <!--  <link href="fpcunit.css" rel="stylesheet"> -->
